--- a/src/styles/OutlinedCard.css
+++ b/src/styles/OutlinedCard.css
@@ -12,7 +12,7 @@
 }
 
 .card {
-  width: 500px;
+  width: 80%;
   height: auto;
   margin: 20px;
   border: 1px solid grey;
@@ -43,4 +43,7 @@
   display: flex;
   justify-content: flex-end;
   padding: 10px 20px;
+}
+.faPlus {
+  cursor: pointer;
 }
