--- a/src/components/Plan/PlanCard.scss
+++ b/src/components/Plan/PlanCard.scss
@@ -5,3 +5,23 @@
   background-color: white;
   margin-top: 30px;
 }
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  align-self: center;
+  align-content: center;
+}
+
+.card-body.card-text{
+  margin-bottom: 0;
+  padding: 0;
+}
+
+#Beginner.Beginner:hover {
+  cursor: pointer;
+  box-shadow: "12px 7px 16px 3px rgba(0,0,0,0.69)"
+}
+
