--- a/src/components/Plan/PlanCard.scss
+++ b/src/components/Plan/PlanCard.scss
@@ -20,8 +20,8 @@
   padding: 0;
 }
 
-#Beginner.Beginner:hover {
-  cursor: pointer;
-  box-shadow: "12px 7px 16px 3px rgba(0,0,0,0.69)"
-}
+// #Beginner.Beginner:hover {
+//   cursor: pointer;
+//   box-shadow: "12px 7px 16px 3px rgba(0,0,0,0.69)"
+// }
 
